--- a/css/style.css
+++ b/css/style.css
@@ -20,36 +20,55 @@ body {
 #header {
     display: flex;
     align-items: center;
-    position: fixed;
+    position: sticky;
     width: 100%;
     top: 0;
-    border: solid 5px blue;
+    background-color: white;
 }
 
 #header img {
     object-fit: contain;
     max-height: 100px;
-    border: solid 5px black;
 }
 
-#header nav {
+#nav-bar {
     text-align: right;
     flex-grow: 1;
-    border: solid 5px black;
 }
 
-#header nav a {
+#nav-bar a {
     text-decoration: none;
     transition: font 0.3s ease;
 }
 
-#header nav a:hover {
+#nav-bar a:hover {
     transform: scale(1.1);
 }
 
 .main-content {
-    display: block;
     width: 100%;
+    height: 80%;
+    bottom: 0;
     text-align: center;
-    border: solid 5px red;
+    /* margin-top: 110px; */
+}
+
+#history, #about {
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
+}
+
+#history h2, #about h2 {
+    text-align: center;
+}
+
+.button {
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+}
+
+@media (max-width: 800px) {
+    flex-direction: column;
 }
