--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 }
 
 body {
-    background-color: white;
+    background-color: rgb(238, 238, 238);
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 16px;
-
+    
     /* Sets the font size to 16px */
     line-height: 1.6;
-
+    
     /* Sets the line-height to 1.6 */
     color: black;
 }
@@ -20,10 +20,10 @@ body {
 #header {
     display: flex;
     align-items: center;
-    position: sticky;
+    position: fixed;
     width: 100%;
     top: 0;
-    background-color: white;
+    background-color: rgb(238, 238, 238);
 }
 
 #header img {
@@ -39,10 +39,21 @@ body {
 #nav-bar a {
     text-decoration: none;
     transition: font 0.3s ease;
+    color: black;
+    font-size: 18px;
+    padding-left: 20px;
+}
+
+#nav-bar a:last-child {
+    padding-right: 5px;
 }
 
 #nav-bar a:hover {
-    transform: scale(1.1);
+    text-decoration: underline;
+}
+
+#nav-bar a:visited, #nav-bar a:active {
+    text-decoration: none;
 }
 
 .main-content {
@@ -50,13 +61,23 @@ body {
     height: 80%;
     bottom: 0;
     text-align: center;
-    /* margin-top: 110px; */
+    margin-top: 110px;
+}
+
+#start {
+    padding-top: 110px;
+    margin-top: -110px;
+    padding-bottom: 50px;
 }
 
 #history, #about {
     width: 80%;
+    max-width: 900px;
     text-align: left;
     margin: 0 auto;
+    padding-bottom: 50px;
+    padding-top: 110px;
+    margin-top: -110px;
 }
 
 #history h2, #about h2 {
@@ -69,6 +90,8 @@ body {
     padding: 5px;
 }
 
-@media (max-width: 800px) {
-    flex-direction: column;
+@media all and (max-width: 500px) {
+    .main-content {
+        max-width: 30%;
+    }
 }
